calculadora_simple.output
Terminals unused in grammar

   REAL
   STR
   LESSEROREQUALSTHAN
   GREATEROREQUALSTHAN
   DIFFERENTTHAN
   LESSERTHAN
   GREATERTHAN
   EQUALS
   THEN
   IF
   ELSE
   TRUE
   FALSE


Grammar

    0 $accept: command $end

    1 command: inicio DONE declaracionGroup DONE fin

    2 inicio: PROCEDURE ID IS

    3 fin: END

    4 declaracionGroup: declaracionGroup DONE declaracion
    5                 | declaracion

    6 declaracion: ID POINTS type ASSIGN expr SEMI
    7            | ID POINTS type SEMI

    8 type: INTEGER
    9     | FLOAT
   10     | STRING

   11 expr: expr PLUS term
   12     | expr MINUS term
   13     | term

   14 term: term MULTIPLY factor
   15     | term DIVIDE factor
   16     | factor

   17 factor: ENT
   18       | LEFT expr RIGHT
   19       | MINUS ENT


Terminals, with rules where they appear

$end (0) 0
error (256)
REAL (258)
ENT (259) 17 19
STR (260)
INTEGER (261) 8
FLOAT (262) 9
STRING (263) 10
PLUS (264) 11
MINUS (265) 12 19
DIVIDE (266) 15
MULTIPLY (267) 14
LEFT (268) 18
RIGHT (269) 18
DONE (270) 1 4
LESSEROREQUALSTHAN (271)
GREATEROREQUALSTHAN (272)
DIFFERENTTHAN (273)
LESSERTHAN (274)
GREATERTHAN (275)
EQUALS (276)
THEN (277)
IS (278) 2
IF (279)
ELSE (280)
SEMI (281) 6 7
TRUE (282)
FALSE (283)
END (284) 3
PROCEDURE (285) 2
ID (286) 2 6 7
POINTS (287) 6 7
ASSIGN (288) 6


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
command (35)
    on left: 1, on right: 0
inicio (36)
    on left: 2, on right: 1
fin (37)
    on left: 3, on right: 1
declaracionGroup (38)
    on left: 4 5, on right: 1 4
declaracion (39)
    on left: 6 7, on right: 4 5
type (40)
    on left: 8 9 10, on right: 6 7
expr (41)
    on left: 11 12 13, on right: 6 11 12 18
term (42)
    on left: 14 15 16, on right: 11 12 13 14 15
factor (43)
    on left: 17 18 19, on right: 14 15 16


state 0

    0 $accept: . command $end

    PROCEDURE  shift, and go to state 1

    command  go to state 2
    inicio   go to state 3


state 1

    2 inicio: PROCEDURE . ID IS

    ID  shift, and go to state 4


state 2

    0 $accept: command . $end

    $end  shift, and go to state 5


state 3

    1 command: inicio . DONE declaracionGroup DONE fin

    DONE  shift, and go to state 6


state 4

    2 inicio: PROCEDURE ID . IS

    IS  shift, and go to state 7


state 5

    0 $accept: command $end .

    $default  accept


state 6

    1 command: inicio DONE . declaracionGroup DONE fin

    ID  shift, and go to state 8

    declaracionGroup  go to state 9
    declaracion       go to state 10


state 7

    2 inicio: PROCEDURE ID IS .

    $default  reduce using rule 2 (inicio)


state 8

    6 declaracion: ID . POINTS type ASSIGN expr SEMI
    7            | ID . POINTS type SEMI

    POINTS  shift, and go to state 11


state 9

    1 command: inicio DONE declaracionGroup . DONE fin
    4 declaracionGroup: declaracionGroup . DONE declaracion

    DONE  shift, and go to state 12


state 10

    5 declaracionGroup: declaracion .

    $default  reduce using rule 5 (declaracionGroup)


state 11

    6 declaracion: ID POINTS . type ASSIGN expr SEMI
    7            | ID POINTS . type SEMI

    INTEGER  shift, and go to state 13
    FLOAT    shift, and go to state 14
    STRING   shift, and go to state 15

    type  go to state 16


state 12

    1 command: inicio DONE declaracionGroup DONE . fin
    4 declaracionGroup: declaracionGroup DONE . declaracion

    END  shift, and go to state 17
    ID   shift, and go to state 8

    fin          go to state 18
    declaracion  go to state 19


state 13

    8 type: INTEGER .

    $default  reduce using rule 8 (type)


state 14

    9 type: FLOAT .

    $default  reduce using rule 9 (type)


state 15

   10 type: STRING .

    $default  reduce using rule 10 (type)


state 16

    6 declaracion: ID POINTS type . ASSIGN expr SEMI
    7            | ID POINTS type . SEMI

    SEMI    shift, and go to state 20
    ASSIGN  shift, and go to state 21


state 17

    3 fin: END .

    $default  reduce using rule 3 (fin)


state 18

    1 command: inicio DONE declaracionGroup DONE fin .

    $default  reduce using rule 1 (command)


state 19

    4 declaracionGroup: declaracionGroup DONE declaracion .

    $default  reduce using rule 4 (declaracionGroup)


state 20

    7 declaracion: ID POINTS type SEMI .

    $default  reduce using rule 7 (declaracion)


state 21

    6 declaracion: ID POINTS type ASSIGN . expr SEMI

    ENT    shift, and go to state 22
    MINUS  shift, and go to state 23
    LEFT   shift, and go to state 24

    expr    go to state 25
    term    go to state 26
    factor  go to state 27


state 22

   17 factor: ENT .

    $default  reduce using rule 17 (factor)


state 23

   19 factor: MINUS . ENT

    ENT  shift, and go to state 28


state 24

   18 factor: LEFT . expr RIGHT

    ENT    shift, and go to state 22
    MINUS  shift, and go to state 23
    LEFT   shift, and go to state 24

    expr    go to state 29
    term    go to state 26
    factor  go to state 27


state 25

    6 declaracion: ID POINTS type ASSIGN expr . SEMI
   11 expr: expr . PLUS term
   12     | expr . MINUS term

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    SEMI   shift, and go to state 32


state 26

   13 expr: term .
   14 term: term . MULTIPLY factor
   15     | term . DIVIDE factor

    DIVIDE    shift, and go to state 33
    MULTIPLY  shift, and go to state 34

    $default  reduce using rule 13 (expr)


state 27

   16 term: factor .

    $default  reduce using rule 16 (term)


state 28

   19 factor: MINUS ENT .

    $default  reduce using rule 19 (factor)


state 29

   11 expr: expr . PLUS term
   12     | expr . MINUS term
   18 factor: LEFT expr . RIGHT

    PLUS   shift, and go to state 30
    MINUS  shift, and go to state 31
    RIGHT  shift, and go to state 35


state 30

   11 expr: expr PLUS . term

    ENT    shift, and go to state 22
    MINUS  shift, and go to state 23
    LEFT   shift, and go to state 24

    term    go to state 36
    factor  go to state 27


state 31

   12 expr: expr MINUS . term

    ENT    shift, and go to state 22
    MINUS  shift, and go to state 23
    LEFT   shift, and go to state 24

    term    go to state 37
    factor  go to state 27


state 32

    6 declaracion: ID POINTS type ASSIGN expr SEMI .

    $default  reduce using rule 6 (declaracion)


state 33

   15 term: term DIVIDE . factor

    ENT    shift, and go to state 22
    MINUS  shift, and go to state 23
    LEFT   shift, and go to state 24

    factor  go to state 38


state 34

   14 term: term MULTIPLY . factor

    ENT    shift, and go to state 22
    MINUS  shift, and go to state 23
    LEFT   shift, and go to state 24

    factor  go to state 39


state 35

   18 factor: LEFT expr RIGHT .

    $default  reduce using rule 18 (factor)


state 36

   11 expr: expr PLUS term .
   14 term: term . MULTIPLY factor
   15     | term . DIVIDE factor

    DIVIDE    shift, and go to state 33
    MULTIPLY  shift, and go to state 34

    $default  reduce using rule 11 (expr)


state 37

   12 expr: expr MINUS term .
   14 term: term . MULTIPLY factor
   15     | term . DIVIDE factor

    DIVIDE    shift, and go to state 33
    MULTIPLY  shift, and go to state 34

    $default  reduce using rule 12 (expr)


state 38

   15 term: term DIVIDE factor .

    $default  reduce using rule 15 (term)


state 39

   14 term: term MULTIPLY factor .

    $default  reduce using rule 14 (term)
